# howamidoing

./: README.md  demo.ipynb  environment.yml  pyproject.toml  test_objects.py
demo/: demo.ipynb  demo.pkl
howamidoing/: __init__.py  objects.py  test_objects.py  utils.py
src/howamidoing/: __init__.py  app_utils.py  auth.py  blog.py  course.py  db.py  demo.py  objects.py  profile.py  schema.sql  utils.py
src/howamidoing/static/: style.css
src/howamidoing/templates/: base.html  course.html  error.html  group.html  index.html
src/howamidoing/templates/auth/: login.html  register.html
src/howamidoing/templates/blog/: index.html
src/howamidoing/templates/course/: add_assignment.html  add_assignment_group.html  add_group_assignment.html  add_single_assignment.html  edit_assignment_group.html  edit_group_assignment.html  edit_single_assignment.html
src/howamidoing/templates/profile/: add_course.html  edit_course.html
src/instance/: howamidoing.sqlite
tests/: test_objects.py
