[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "howamidoing"
version = "0.0.1"
authors = [
  { name="Zhihao Du", email="zhihaodu@berkeley.edu" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/JohnsonJDDJ/howamidoing"
"Bug Tracker" = "https://github.com/JohnsonJDDJ/howamidoing/issues"